--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
 click==7.1.2
+fastapi==0.61.0
 Flask==1.1.2
 gunicorn==20.0.4
+h11==0.9.0
+httptools==0.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.16.0
 MarkupSafe==1.1.1
 numpy==1.19.1
 pandas==1.1.1
+pydantic==1.6.1
 python-dateutil==2.8.1
 pytz==2020.1
 scikit-learn==0.23.2
 scipy==1.5.2
 six==1.15.0
 sklearn-pandas==2.0.0
+starlette==0.13.6
 threadpoolctl==2.1.0
+uvicorn==0.11.8
+uvloop==0.14.0
+websockets==8.1
 Werkzeug==1.0.1
